2008-04-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-plugins-bad.spec.in:
	  Remove souphttpsrc plugin from spec files, it's moved to -good.

2008-04-14  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Remove soup test certificates from the dist.

2008-04-13  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/dirac/gstdiracenc.cc:
	Fix compilation by casting string constants.

	* sys/Makefile.am:
	Fix WININET_DIR variable reference.

2008-04-13  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-bad-plugins-docs.sgml:
	* docs/plugins/gst-plugins-bad-plugins-sections.txt:
	* docs/plugins/gst-plugins-bad-plugins.args:
	* docs/plugins/inspect/plugin-soup.xml:
	* ext/Makefile.am:
	* ext/soup/Makefile.am:
	* ext/soup/gstsouphttpsrc.c:
	* ext/soup/gstsouphttpsrc.h:
	* tests/check/Makefile.am:
	* tests/check/elements/souphttpsrc.c:
	* tests/check/test-cert.pem:
	* tests/check/test-key.pem:

	Remove soup plugin that's moved to -good (#523124)

2008-04-12  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/flv/gstflvparse.c: (gst_flv_parse_metadata_item),
	  (gst_flv_parse_tag_script):
	  Handle NULL returns from FLV_GET_STRING() more gracefully. Fixes
	  crash caused by a strlen on a NULL string (#527622).

2008-04-11  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Ole André Vadla Ravnås  <ole.andre.ravnas at tandberg com>

	* sys/dshowsrcwrapper/gstdshowvideosrc.c: (PROP_DEVICE_NAME),
	  (gst_dshowvideosrc_class_init), (gst_dshowvideosrc_init),
	  (gst_dshowvideosrc_dispose), (gst_dshowvideosrc_stop),
	  (gst_dshowvideosrc_unlock), (gst_dshowvideosrc_unlock_stop),
	  (gst_dshowvideosrc_create), (gst_dshowvideosrc_push_buffer):
	* sys/dshowsrcwrapper/gstdshowvideosrc.h:
	  Don't increase latency by queuing buffers in an async queue when
	  the streaming thread can't keep up or isn't scheduled often
	  enough for some other reason, but just drop the previous buffer